--- a/views/home.html
+++ b/views/home.html
@@ -13,5 +13,6 @@
     <a href="/works">Works</a>
     <a href="/gallery">Gallery</a>
     <h1>Home</h1>
+    <h2>Welcome to Michael Jackson's biography</h2>
 </body>
 </html>
