--- a/views/works.html
+++ b/views/works.html
@@ -12,6 +12,21 @@
     <a href="/about">About</a>
     <a href="/works">Works</a>
     <a href="/gallery">Gallery</a>
-    <h1>Works</h1>
+    <h1>Works / Discography</h1>
+
+    <ul>
+        <li>Got to Be There (1972)</li>
+        <li>Ben (1972)</li>
+        <li>Music & Me (1973)</li>
+        <li>Forever, Michael (1975)</li>
+        <li>Off the Wall (1979)</li>
+        <li>Thriller (1982)</li>
+        <li>Bad (1987)</li>
+        <li>Dangerous (1991)</li>
+        <li>HIStory: Past, Present and Future, Book I (1995)</li>
+        <li>Invincible (2001)</li>
+    </ul>
+
+
 </body>
 </html>
