--- a/views/about.html
+++ b/views/about.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="/home">Home</a>
-    <a href="/about">About</a>
-    <a href="/works">Works</a>
-    <a href="/gallery">Gallery</a>
+    <div class="menu-header">
+        <a href="/home">Home</a>
+        <a href="/about">About</a>
+        <a href="/works">Works</a>
+        <a href="/gallery">Gallery</a>
+    </div>
     <h1>About</h1>
 
     <p>
