--- a/views/home.html
+++ b/views/home.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="/home">Home</a>
-    <a href="/about">About</a>
-    <a href="/works">Works</a>
-    <a href="/gallery">Gallery</a>
+    <div class="menu-header">
+        <a href="/home">Home</a>
+        <a href="/about">About</a>
+        <a href="/works">Works</a>
+        <a href="/gallery">Gallery</a>
+    </div>
     <h1>Home</h1>
     <h2>Welcome to Michael Jackson's biography</h2>
+    <h3>A web created by Juan Ferrán y Pelayo Trives</h3>
 </body>
 </html>
